stepStarterVideo fixed + buttonToGo no longer off center

--- a/src/components/ConfirmYourDetailsPage/ConfirmYourDetailsPage.css
+++ b/src/components/ConfirmYourDetailsPage/ConfirmYourDetailsPage.css
@@ -51,7 +51,6 @@ Responsive Grid: One Column Default, Two Columns When Space Allows
     padding: 10px 20px;
     border-radius: 15px;
     font-size: 16px;
-    margin-left: 50px;
     margin-top: 30px;
     height: 50px;
     width: 250px;
