--- a/src/components/MissedDayView/MissedDayView.css
+++ b/src/components/MissedDayView/MissedDayView.css
@@ -46,7 +46,6 @@
   padding: 10px 20px;
   border-radius: 15px;
   font-size: 16px;
-  margin-left: 50px;
   margin-top: 30px;
   height: 50px;
   width: 250px;
